<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_control</name>
  <version>0.0.1</version>
  <description>Motion control algorithms for Create 3</description>
  <maintainer email="ilario.azzollini92@gmail.com">Ilario Azzollini</maintainer>
  <license>Apache 2.0</license>
  <author email="ilario.azzollini92@gmail.com">Ilario Azzollini</author>

  
  <depend>geometry_msgs</depend>
  <depend>irobot_create_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
